# LinuxScripts

Basic/: CMakeLists.txt
Basic/Source/: Ball.cpp  Ball.h  Rectangle.cpp  main.cpp
Source2_0/: Ball.cpp  Ball.h  Istrukcja do kompilacji  Rectangle.cpp  Rectangle.h  kulka  main.cpp
